<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:background="@color/gray_0">

   <androidx.cardview.widget.CardView
       android:id="@+id/article_item_card"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="4dp"
       app:cardElevation="3dp"
       app:contentPadding="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
       android:layout_marginTop="4dp"
      android:layout_marginBottom="4dp"
       app:cardPreventCornerOverlap="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="5dp"
               android:orientation="horizontal">

               <ImageView
                   android:id="@+id/article_item_author_img"
                   android:layout_width="18dp"
                   android:layout_height="18dp"
                   android:contentDescription="@string/image_content_description"
                   android:src="@drawable/article_author"/>

               <TextView
                   android:id="@+id/article_item_author_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/main_home"
                   android:textSize="12sp"
                   android:gravity="center_vertical"
                   android:layout_marginStart="5dp"
                   android:layout_gravity="center_vertical"/>
               <TextView
                   android:id="@+id/article_item_chapter_name"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   android:layout_gravity="center_vertical"
                   android:textSize="12sp"
                   android:textColor="@color/app_main_color"
                   android:text="@string/main_home"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginTop="3dp"
               android:layout_marginBottom="5dp"
               android:orientation="horizontal">

               <ImageView
                   android:id="@+id/article_item_img_description"
                   android:contentDescription="@string/image_content_description"
                   android:layout_width="50dp"
                   android:layout_height="70dp"
                   android:src="@color/app_main_color"
                   android:layout_marginEnd="8dp"/>

               <TextView
                   android:id="@+id/article_item_title"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:textSize="18sp"
                   android:text="@string/image_content_description"
                   android:layout_marginEnd="8dp"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp"
               android:orientation="horizontal">

               <com.sackcentury.shinebuttonlib.ShineButton
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_gravity="center_vertical"
                   android:id="@+id/article_item_like_img"
                   app:btn_color="@android:color/darker_gray"
                   app:btn_fill_color="@android:color/holo_red_dark"
                   app:allow_random_color="true"
                   app:enable_flashing="false"
                   app:big_shine_color="#FF6666"
                   app:click_animation_duration="200"
                   app:shine_animation_duration="1500"
                   app:shine_turn_angle="10"
                   app:small_shine_offset_angle="20"
                   app:small_shine_color="#CC9999"
                   app:shine_count="8"
                   app:siShape="@raw/article_like"
                   android:layout_marginEnd="5dp"/>

               <TextView
                   android:id="@+id/article_item_time"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:textSize="12sp"/>

               <TextView
                   android:id="@+id/article_item_new"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/article_new_description"
                   android:layout_marginStart="8sp"
                   android:paddingStart="3dp"
                   android:paddingEnd="3dp"
                   android:background="@drawable/article_new_shape"
                   android:textSize="12sp"/>

               <TextView
                   android:text="@string/article_project_description"
                   android:paddingStart="3dp"
                   android:paddingEnd="3dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/article_item_project_description"
                   android:layout_marginStart="8sp"
                   android:background="@drawable/article_description_shape"
                   android:textSize="12sp"/>
           </LinearLayout>
       </LinearLayout>
   </androidx.cardview.widget.CardView>
</LinearLayout>